--- a/projects/index.html
+++ b/projects/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>vincentmichiel | projects</title>
-    <link rel="shortcut icon" href="./assets/favicon/favicon.ico">
-    <link rel="icon" type="image/png" href="./assets/favicon/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="./assets/favicon/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="./assets/favicon/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="./assets/favicon/android-chrome-512x512.png" sizes="512x512">
-    <link rel="apple-touch-icon" href="./assets/favicon/apple-touch-icon.png">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="android-chrome-512x512.png" sizes="512x512">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="../scripts/audio_player/css/audioplayer.css" />
