updated responsiveness for mobile devices

--- a/projects/index.html
+++ b/projects/index.html
@@ -101,7 +101,7 @@
         </div>
     </div>
     <footer>
-        <div class="container" style="padding-left: 8%; padding-right: 1rem;">
+        <div class="container" id="footerleft">
             <ul>
                 <li id="footerhome">home</li>
                 <li id="footerabout">about</li>
@@ -109,7 +109,7 @@
                 <li id="footercontact">contact</li>
             </ul>
         </div>
-        <div class="container" style="justify-content: flex-end; padding-left:1rem; padding-right: 8%;">
+        <div class="container" id="footerright">
             <ul style="list-style-type: none;">
                 <li id="footerinstagram"> <i class="fa fa-instagram"></i>
                     &nbsp vincentmichiel
