updated footer social links

--- a/projects/index.html
+++ b/projects/index.html
@@ -114,7 +114,7 @@
                 <li id="footerinstagram"> <i class="fa fa-instagram"></i>
                     &nbsp vincentmichiel
                 </li>
-                <li id="footergithub"> <i class="fa fa-github" id="instagramlogo"></i>
+                <li id="footergithub"> <i class="fa fa-github"></i>
                     &nbsp github
                 </li>
             </ul>
