--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <li id="footerinstagram"> <i class="fa fa-instagram"></i>
                     &nbsp vincentmichiel
                 </li>
-                <li id="footergithub"> <i class="fa fa-github" id="instagramlogo"></i>
+                <li id="footergithub"> <i class="fa fa-github"></i>
                     &nbsp github
                 </li>
             </ul>
