updated trail of light description text

--- a/projects/index.html
+++ b/projects/index.html
@@ -43,7 +43,7 @@
                 combination of acoustic and electronic sound sources to create an unique sound palette, complementing
                 the visual elements in the film. <br> Although there isn't a melodic motive in this score, the motive is hidden
                 in the instruments and sounds themselves. The piano represents realism and the nature like feel in the film. Different
-                synths and strings represent the adventurous theme. The sounds are arranged to mimic the feeling of intimacy, next to the feeling of magnificene happening in the film.
+                synths and strings represent the adventurous theme. The instruments are arranged to mimic the feeling of intimacy, next to the feeling of magnificene happening in the film.
             </div>
         </div>
         <div class="contentframe">
