added spotify link to footer

--- a/projects/index.html
+++ b/projects/index.html
@@ -114,6 +114,9 @@
                 <li id="footerinstagram"> <i class="fa fa-instagram"></i>
                     &nbsp vincentmichiel
                 </li>
+                <li id="footerspotify"> <i class="fa fa-spotify"></i>
+                    &nbsp spotify
+                </li>
                 <li id="footergithub"> <i class="fa fa-github"></i>
                     &nbsp github
                 </li>
