added responsiveness for social links in footer for mobile devices

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
         <div class="container" id="footerright">
             <ul style="list-style-type: none;">
                 <li id="footerinstagram"> <i class="fa fa-instagram"></i>
-                    &nbsp vincentmichiel
+                    <t>&nbsp vincentmichiel</t>
                 </li>
                 <li id="footerspotify"> <i class="fa fa-spotify"></i>
-                    &nbsp spotify
+                    <t>&nbsp spotify</t>
                 </li>
                 <li id="footergithub"> <i class="fa fa-github"></i>
-                    &nbsp github
+                    <t>&nbsp github</t>
                 </li>
             </ul>
         </div>
