added SoundScaper project

--- a/projects/index.html
+++ b/projects/index.html
@@ -30,6 +30,28 @@
                 data-aos-once="true" data-aos-offset="100">
                 <h1 data-aos="fade-up" data-aos-duration="400" data-aos-easing="ease-in-out" data-aos-once="true"
                     data-aos-delay="100" data-aos-offset="150">
+                    SoundScaper
+                </h1>2024
+            </div>
+            <div class="videocontainer" data-aos="fade-up" data-aos-duration="300" data-aos-easing="ease-in-out"
+                data-aos-once="true" data-aos-delay="200" data-aos-offset="100">
+                <iframe src="https://www.youtube.com/embed/vJHsrU3qCUg" allow="fullscreen"></iframe>
+            </div>
+            <div class="description" data-aos="fade-up" data-aos-duration="300" data-aos-easing="ease-in-out"
+                data-aos-once="true" data-aos-offset="150">
+                SoundScaper is a realtime audio effect focused on bringing drone-like sounds to life. This project was made using the JUCE
+                framework and can be used in every major DAW as VST3, AAX and AU versions. <br>
+                This plugin was made out of the results of technical research into the fast-fourier-transform (FFT). The plugin is based
+                on four different sections. In each section, FFT is used in a innovative way to add new character to the sound source.
+                Furthermore, each parameter can be modified independently using a dedicated LFO, adding movement over time in new, creative ways. <br>
+                <br>All source code for this project can be found on <a href="https://github.com/vincentmichiel/CSD2/tree/main/CSD2d/src/SoundScaper/Source" target="_blank">GitHub</a>.
+            </div>
+        </div>
+        <div class="contentframe">
+            <div class="banner" data-aos="fade-up" data-aos-duration="250" data-aos-easing="ease-in-out"
+                data-aos-once="true" data-aos-offset="100">
+                <h1 data-aos="fade-up" data-aos-duration="400" data-aos-easing="ease-in-out" data-aos-once="true"
+                    data-aos-delay="100" data-aos-offset="150">
                     Trail of Light
                 </h1>2024
             </div>
