--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
                     <textarea name="Bericht" placeholder="" class="message"></textarea>
                     <button type="submit" class="submit" value="send">send</button>
                 </form>
+                <div class="contactfooter">
+                    <div class="container"><a href="mailto:vincentmichiel.vdb@gmail.com"><i class="fa fa-envelope"></i>&nbsp;&nbsp;vincentmichiel.vdb@gmail.com</a></div>
+                    <div class="container"><a href="tel:+31644532035"><i class="fa fa-phone"></i>&nbsp;&nbsp;(+31) 6 44 53 2035</a></div>
+                </div>
             </div>
         </div>
     </div>
