--- a/owenbryce/index.html
+++ b/owenbryce/index.html
@@ -56,7 +56,7 @@
         <section class="live-performances" id="live-performances">
             <div class="content-wrapper" style="flex-direction: column; padding-bottom: 3rem; overflow: hidden;">
                 <div class="content-column" style="align-items: flex-end; z-index: 2;">
-                    <h2>WATCH OWEN BRYCE LIVE</h2>
+                    <h2>WATCH OWEN BRYCE</h2>
                     <h3 style="margin-top: 0.8rem;" class="text-dark">Upcoming</h3>
                 </div>
                 <div class="bg" style="background-image: url(assets/img/cutout_owenFalling.png); background-size: 85%; background-position-y: 80%;">
