addded footer page to owenbryce demo

--- a/owenbryce/index.html
+++ b/owenbryce/index.html
@@ -162,7 +162,31 @@
             </div>
         </section>
 
-        <!-- <section class="contact"></section> -->
+        <section class="contact" style="height: fit-content; margin: 0; padding: 0; min-height: 0;">
+            <div class="content-wrapper" style="min-height: 0;">
+                <div class="content-column" style="align-items: flex-start; margin-bottom: 0;">
+                    <h5>Follow:</h5>
+                    <span><a href="https://www.instagram.com/owenbryce_/" target="_blank">INSTAGRAM</a></span>
+                </div>
+                <div class="content-column" style="align-items: flex-end;">
+                    <h5>Listen now on:</h5>
+                    <span><a href="https://music.apple.com/nl/artist/owenbryce/1590507188?l=en-GB" target="_blank">APPLE MUSIC</a> / <a href="https://open.spotify.com/artist/3IdIvobX95JU1jBjlYML9h?si=1ovnFoW9TRKrlormP6VHuw" target="_blank">SPOTIFY</a> / <a href="https://www.youtube.com/channel/UCo4QfHct7GlSb6zwN4d9auw" target="_blank">YOUTUBE</a></span>
+                </div>
+            </div>
+            <div class="content-wrapper" style="min-height: 80vh;">
+                <div class="content-column" style="margin-bottom: 0; flex-grow: 0;">
+                    <h2 style="font-size: 1.6rem;">MENU</h2>
+                    <a href="#discography"><h6>MUSIC</h6></a>
+                    <a href="#live-performances"><h6>LIVE</h6></a>
+                    <a href="#top"><h6>CONTACT</h6></a>
+                </div>
+                <div class="content-column" style="justify-content: flex-end; margin-bottom: 0;">
+                    <img src="assets/img/cutout_owenSit.png" class="sitting-image"/>
+                </div>
+            </div>
+        </section>
+
+
         <div class="footer">website developed by: &nbsp;<a href="https://www.vincentmichiel.nl">Vincent Michiel</a></div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
