--- a/owenbryce/index.html
+++ b/owenbryce/index.html
@@ -11,8 +11,8 @@
         <section id="top">
             <div class="bg" style="background-image: url(assets/img/bg_hero.jpg);"></div>
             <div class="content-wrapper">
-                <div class="content-column" style="align-items: flex-start;">
-                    <div class="content-column" style="margin: 0">
+                <div class="content-column reset-margin-small-screen" style="align-items: flex-start;">
+                    <div class="content-column no-margin">
                         <img src="assets/img/owenLogo1.svg" alt="logo" width="200px">
                         <ul style="margin-top: 1.2em" class="nav">
                             <a href="#top"><li id="home">Home</li></a>
@@ -20,7 +20,7 @@
                             <a href="#live-performances"><li id="dates">Live</li></a>
                             <a href="#band-members"><li id="band">Band</li></a>
                         </ul></div>
-                    <div class="content-column" style="margin: 0; justify-content: flex-end;">
+                    <div class="content-column no-margin" style="justify-content: flex-end;">
                         <span>
                             <a href="https://www.instagram.com/owenbryce_/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                             <!-- <i class="fa-brands fa-tiktok"></i> -->
@@ -30,7 +30,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="content-column" style="align-items: flex-end; justify-content: flex-end;">
+                <div class="content-column reset-margin-small-screen" style="align-items: flex-end; justify-content: flex-end;">
                     <div style="text-align: center;">
                         <h3>Listen now on:</h3>
                         <span><a href="https://music.apple.com/nl/artist/owenbryce/1590507188?l=en-GB" target="_blank">APPLE MUSIC</a> / <a href="https://open.spotify.com/artist/3IdIvobX95JU1jBjlYML9h?si=1ovnFoW9TRKrlormP6VHuw" target="_blank">SPOTIFY</a> / <a href="https://www.youtube.com/channel/UCo4QfHct7GlSb6zwN4d9auw" target="_blank">YOUTUBE</a></span>
@@ -42,26 +42,27 @@
 
         <section id="discography" style="background-image: url('assets/img/bg_discography.png');">
             <div class="content-wrapper">
-                <div class="content-column" style="align-items: center; padding-top: 4rem">
+                <div class="content-column reset-margin-small-screen" style="align-items: center; padding-top: 4rem">
                     <h2 class="text-brown-light">DISCOGRAPHY</h2>
                     <h3 style="margin-top: 0.8rem;">New Releases</h3>
-                    <h4 class="text-brown-light" style="margin-top: 8rem">IN LOVE WITH A LIE</h4>
+                    <h4 style="margin-top: 8rem">Coming Soon</h4>
+                    <!-- <h4 style="margin-top: 8rem">IN LOVE WITH A LIE</h4>
                     <h5 style="margin-top: 1rem;">Listen now on:</h5>
-                    <span><a href="https://music.apple.com/nl/artist/owenbryce/1590507188?l=en-GB" target="_blank">APPLE MUSIC</a> / <a href="https://open.spotify.com/artist/3IdIvobX95JU1jBjlYML9h?si=1ovnFoW9TRKrlormP6VHuw" target="_blank">SPOTIFY</a> / <a href="https://www.youtube.com/channel/UCo4QfHct7GlSb6zwN4d9auw" target="_blank">YOUTUBE</a></span>
+                    <span><a href="https://music.apple.com/nl/artist/owenbryce/1590507188?l=en-GB" target="_blank">APPLE MUSIC</a> / <a href="https://open.spotify.com/artist/3IdIvobX95JU1jBjlYML9h?si=1ovnFoW9TRKrlormP6VHuw" target="_blank">SPOTIFY</a> / <a href="https://www.youtube.com/channel/UCo4QfHct7GlSb6zwN4d9auw" target="_blank">YOUTUBE</a></span> -->
                 </div>
-                <div class="content-column"></div>
+                <div class="content-column reset-margin-small-screen"></div>
             </div>
         </section>
 
         <section class="live-performances" id="live-performances">
             <div class="content-wrapper" style="flex-direction: column; padding-bottom: 3rem; overflow: hidden;">
-                <div class="content-column" style="align-items: flex-end; z-index: 2;">
+                <div class="content-column reset-margin-small-screen" style="align-items: flex-end; z-index: 2;">
                     <h2>WATCH OWEN BRYCE</h2>
                     <h3 style="margin-top: 0.8rem;" class="text-dark">Upcoming</h3>
                 </div>
-                <div class="bg" style="background-image: url(assets/img/cutout_owenFalling.png); background-size: 85%; background-position-y: 80%;">
+                <div class="bg" style="background-image: url(assets/img/cutout_owenFalling.png); background-size: 85%; background-position-y: 45%;">
                 </div>
-                <div class="content-column" style="align-items: center; z-index: 2; margin-top: 15vh">
+                <div class="content-column reset-margin-small-screen" style="align-items: center; z-index: 2; margin-top: 15vh">
                     <h3 style="font-size: 5rem;">Live Performances</h3>
                     <h3 style="margin-top: 0.8rem;" class="text-dark">In 2025</h3>
 
@@ -93,9 +94,9 @@
         </section>
 
         <section>
-            <div class="bg" style="background-image: url('assets/img/bg_biography.jpg');"></div>
+            <div class="bg" style="background-image: url('assets/img/bg_biography.jpg'); background-position: 0px;"></div>
             <div class="content-wrapper">
-                <div class="content-column" style="align-items: center; padding: 4rem; flex-basis: 400px;">
+                <div class="content-column reset-margin-small-screen" style="align-items: center; padding: 4rem; flex-basis: 400px;">
                     <h2 class="text-dark">BIOGRAPHY</h2>
                     <h3 style="margin-top: 0.8rem; margin-bottom: 4rem" class="text-dark">The Origin</h3>
                     <p class="text-dark">
@@ -108,7 +109,7 @@
                         He draws inspiration from the stories people share with him and his own experiences, weaving them into his music in a unique and heartfelt way. Through authentic storytelling, he touches his listeners and takes them on a dreamy journey.
                     </p>
                 </div>
-                <div class="content-column"></div>
+                <div class="content-column reset-margin-small-screen"></div>
             </div>
         </section>
 
@@ -119,13 +120,13 @@
                 </div>
             </div>
             <div class="content-wrapper" style="min-height: 0;">
-                <div class="content-column" style="margin: 0; justify-content: flex-end;">
+                <div class="content-column no-margin" style="justify-content: flex-end;">
                     <img src="assets/img/cutout_owenBack.png" style="width: 100%; min-width: 500px;" class="small-screen-hide">
                 </div>
-                <div class="content-column" style="flex-grow: 1.5; flex-basis: 578px">
+                <div class="content-column reset-margin-small-screen" style="flex-grow: 1.5; flex-basis: 578px">
                     <h3 style="font-size: 5rem;">Members</h3>
                     <div class="content-wrapper" style="min-height: 0;">
-                        <div class="content-column">
+                        <div class="content-column reset-margin-small-screen">
                             <div style="text-align: center;">
                                 <h4 class="text-dark-green" style="font-size: 3rem; line-height: 2.8rem;">JELLE HUMBLET</h4>
                                 <h5 style="margin-top: 0.8rem;">Bassist</h5>
@@ -138,18 +139,14 @@
                                 <h4 class="text-dark-green" style="font-size: 3rem; line-height: 2.8rem;">LOEK MAAS</h4>
                                 <h5 style="margin-top: 0.8rem;">Guitarist</h5>
                             </div>
-                            <div style="text-align: center; margin-top: 2rem">
+                        </div>
+                        <div class="content-column reset-margin-small-screen">
+                            <div style="text-align: center;">
                                 <h4 class="text-dark-green" style="font-size: 3rem; line-height: 2.8rem;">LUUK SCHAPERS</h4>
                                 <h5 style="margin-top: 0.8rem;">Guitarist</h5>
                             </div>
-                        </div>
-                        <div class="content-column">
-                            <div style="text-align: center;">
-                                <h4 class="text-dark-green" style="font-size: 3rem; line-height: 2.8rem;">KEES NOLET</h4>
-                                <h5 style="margin-top: 0.8rem;">Guitarist</h5>
-                            </div>
                             <div style="text-align: center; margin-top: 2rem">
-                                <h4 class="text-dark-green" style="font-size: 3rem; line-height: 2.8rem;">TOBIAS DERKSEN</h4>
+                                <h4 class="text-dark-green" style="font-size: 3rem; line-height: 2.8rem;">TOBY STAR</h4>
                                 <h5 style="margin-top: 0.8rem;">Pianist</h5>
                             </div>
                             <div style="text-align: center; margin-top: 2rem">
@@ -162,25 +159,25 @@
             </div>
         </section>
 
-        <section class="contact" style="height: fit-content; margin: 0; padding: 0; min-height: 0;">
+        <section class="contact no-margin" style="height: fit-content; padding: 0; min-height: 0;">
             <div class="content-wrapper" style="min-height: 0;">
-                <div class="content-column" style="align-items: flex-start; margin-bottom: 0;">
+                <div class="content-column no-margin-bottom" style="align-items: flex-start;">
                     <h5>Follow:</h5>
                     <span><a href="https://www.instagram.com/owenbryce_/" target="_blank">INSTAGRAM</a></span>
                 </div>
-                <div class="content-column" style="align-items: flex-end;">
+                <div class="content-column reset-margin-small-screen" style="align-items: flex-end;">
                     <h5>Listen now on:</h5>
                     <span><a href="https://music.apple.com/nl/artist/owenbryce/1590507188?l=en-GB" target="_blank">APPLE MUSIC</a> / <a href="https://open.spotify.com/artist/3IdIvobX95JU1jBjlYML9h?si=1ovnFoW9TRKrlormP6VHuw" target="_blank">SPOTIFY</a> / <a href="https://www.youtube.com/channel/UCo4QfHct7GlSb6zwN4d9auw" target="_blank">YOUTUBE</a></span>
                 </div>
             </div>
             <div class="content-wrapper" style="min-height: 80vh;">
-                <div class="content-column" style="margin-bottom: 0; flex-grow: 0;">
+                <div class="content-column no-margin-bottom" style="flex-grow: 0;">
                     <h2 style="font-size: 1.6rem;">MENU</h2>
                     <a href="#discography"><h6>MUSIC</h6></a>
                     <a href="#live-performances"><h6>LIVE</h6></a>
                     <a href="#top"><h6>CONTACT</h6></a>
                 </div>
-                <div class="content-column" style="justify-content: flex-end; margin-bottom: 0;">
+                <div class="content-column no-margin-bottom" style="justify-content: flex-end;">
                     <img src="assets/img/cutout_owenSit.png" class="sitting-image"/>
                 </div>
             </div>
