--- a/naturenoise/index.html
+++ b/naturenoise/index.html
@@ -9,6 +9,7 @@
 <script src="/style.e308ff8e.js"></script><link rel="stylesheet" href="/main.1f19ae8e.css"></head>
 <body>
     <div id="map"></div>
+    <span id="info"></span>
     <script type="module" src="/main.1f19ae8e.js"></script>
 </body>
 </html>
