--- a/owenbryce/index.html
+++ b/owenbryce/index.html
@@ -17,7 +17,7 @@
                         <ul style="margin-top: 1.2em" class="nav">
                             <a href="#top"><li id="home">Home</li></a>
                             <a href="#discography"><li id="music">Music</li></a>
-                            <a href="#live-performances"><li id="dates">Live</li></a>
+                            <!-- <a href="#live-performances"><li id="dates">Live</li></a> -->
                             <a href="#band-members"><li id="band">Band</li></a>
                         </ul></div>
                     <div class="content-column no-margin" style="justify-content: flex-end;">
@@ -26,16 +26,16 @@
                             <!-- <i class="fa-brands fa-tiktok"></i> -->
                             <a href="https://open.spotify.com/artist/3IdIvobX95JU1jBjlYML9h?si=1ovnFoW9TRKrlormP6VHuw" target="_blank"><i class="fa-brands fa-spotify"></i></a>
                             <!-- <i class="fa-brands fa-facebook"></i> -->
-                            <a href="https://www.youtube.com/channel/UCo4QfHct7GlSb6zwN4d9auw" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                            <a href="https://www.youtube.com/@owenbryce5429" target="_blank"><i class="fa-brands fa-youtube"></i></a>
                         </span>
                     </div>
                 </div>
                 <div class="content-column reset-margin-small-screen" style="align-items: flex-end; justify-content: flex-end;">
                     <div style="text-align: center;">
                         <h3>Listen now on:</h3>
-                        <span><a href="https://music.apple.com/nl/artist/owenbryce/1590507188?l=en-GB" target="_blank">APPLE MUSIC</a> / <a href="https://open.spotify.com/artist/3IdIvobX95JU1jBjlYML9h?si=1ovnFoW9TRKrlormP6VHuw" target="_blank">SPOTIFY</a> / <a href="https://www.youtube.com/channel/UCo4QfHct7GlSb6zwN4d9auw" target="_blank">YOUTUBE</a></span>
+                        <span><a href="https://music.apple.com/nl/artist/owenbryce/1590507188?l=en-GB" target="_blank">APPLE MUSIC</a> / <a href="https://open.spotify.com/artist/3IdIvobX95JU1jBjlYML9h?si=1ovnFoW9TRKrlormP6VHuw" target="_blank">SPOTIFY</a> / <a href="https://www.youtube.com/@owenbryce5429" target="_blank">YOUTUBE</a></span>
                     </div>
-                    <span style="text-align: end; margin-top: 2em"><h1>IN LOVE<br>WITH A LIE</h1></span>
+                    <!-- <span style="text-align: end; margin-top: 2em"><h1>IN LOVE<br>WITH A LIE</h1></span> -->
                 </div>
             </div>
         </section>
@@ -54,7 +54,7 @@
             </div>
         </section>
 
-        <section class="live-performances" id="live-performances">
+        <!-- <section class="live-performances" id="live-performances">
             <div class="content-wrapper" style="flex-direction: column; padding-bottom: 3rem; overflow: hidden;">
                 <div class="content-column reset-margin-small-screen" style="align-items: flex-end; z-index: 2;">
                     <h2>WATCH OWEN BRYCE</h2>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section>
             <div class="bg" style="background-image: url('assets/img/bg_biography.jpg'); background-position: 0px;"></div>
@@ -163,18 +163,18 @@
             <div class="content-wrapper" style="min-height: 0;">
                 <div class="content-column no-margin-bottom" style="align-items: flex-start;">
                     <h5>Follow:</h5>
-                    <span><a href="https://www.instagram.com/owenbryce_/" target="_blank">INSTAGRAM</a></span>
+                    <span><a href="https://www.instagram.com/owenbryce_/" target="_blank"><i class="fa-brands fa-instagram"></i> INSTAGRAM</a></span>
                 </div>
                 <div class="content-column reset-margin-small-screen" style="align-items: flex-end;">
                     <h5>Listen now on:</h5>
-                    <span><a href="https://music.apple.com/nl/artist/owenbryce/1590507188?l=en-GB" target="_blank">APPLE MUSIC</a> / <a href="https://open.spotify.com/artist/3IdIvobX95JU1jBjlYML9h?si=1ovnFoW9TRKrlormP6VHuw" target="_blank">SPOTIFY</a> / <a href="https://www.youtube.com/channel/UCo4QfHct7GlSb6zwN4d9auw" target="_blank">YOUTUBE</a></span>
+                    <span><a href="https://music.apple.com/nl/artist/owenbryce/1590507188?l=en-GB" target="_blank">APPLE MUSIC</a> / <a href="https://open.spotify.com/artist/3IdIvobX95JU1jBjlYML9h?si=1ovnFoW9TRKrlormP6VHuw" target="_blank">SPOTIFY</a> / <a href="https://www.youtube.com/@owenbryce5429" target="_blank">YOUTUBE</a></span>
                 </div>
             </div>
             <div class="content-wrapper" style="min-height: 80vh;">
                 <div class="content-column no-margin-bottom" style="flex-grow: 0;">
                     <h2 style="font-size: 1.6rem;">MENU</h2>
                     <a href="#discography"><h6>MUSIC</h6></a>
-                    <a href="#live-performances"><h6>LIVE</h6></a>
+                    <!-- <a href="#live-performances"><h6>LIVE</h6></a> -->
                     <a href="#top"><h6>CONTACT</h6></a>
                 </div>
                 <div class="content-column no-margin-bottom" style="justify-content: flex-end;">
@@ -184,7 +184,7 @@
         </section>
 
 
-        <div class="footer">website developed by: &nbsp;<a href="https://www.vincentmichiel.nl">Vincent Michiel</a></div>
+        <div class="footer">Copyright 2025 Owen Bryce - all rights included &nbsp; &nbsp;  website developed by: &nbsp;<a href="https://www.vincentmichiel.nl">Vincent Michiel</a></div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
