added analogx genesis

--- a/projects/index.html
+++ b/projects/index.html
@@ -25,6 +25,32 @@
             <h1 id="title"><i class="fa fa-home" style="transform:rotateY(180deg)"></i>&nbsp VINCENT MICHIEL</h1>
 
         </header>
+         <div class="contentframe">
+            <div class="banner" data-aos="fade-up" data-aos-duration="250" data-aos-easing="ease-in-out"
+                data-aos-once="true" data-aos-offset="100">
+                <h1 data-aos="fade-up" data-aos-duration="400" data-aos-easing="ease-in-out" data-aos-once="true"
+                    data-aos-delay="100" data-aos-offset="150">
+                    AnalogX Genesis
+                </h1>2025
+            </div>
+            <img src="../assets/img/genesis.png" alt="piano picture" data-aos="fade-up" data-aos-duration="300"
+                data-aos-easing="ease-in-out" data-aos-once="true" data-aos-delay="200" data-aos-offset="100">
+            <div class="description" data-aos="fade-up" data-aos-duration="300" data-aos-easing="ease-in-out"
+                data-aos-once="true" data-aos-offset="150">
+                Genesis by AnalogX is an industry-leading VST plugin that uses neural networks to process audio. By training
+                different AI models for devices such as pre-amps, equalizers and compressors, we achieved nearly perfect
+                hardware emulations of some of the most iconic studio equipment.<br>
+                Next to neural processing, this plugin also contains state of the art, zero-latency filters. And by allowing
+                the user to use up to 4 processing chains in a single instance, we allow full control and lots of creative
+                possibilities for processing sound.<br><br>
+                My role in this project constisted of working on both the UI and DSP. Some challenges were creating the flexible
+                UI with 4 profiles that can be switched on and off, as well as researching and implementing the zero-latency VA
+                filters.
+                <br><br>
+                Genesis can be found on <a href="https://analogxai.company.site" target="_blank">AnalogX's website</a>.
+                <br type="_moz">
+            </div>
+        </div>
         <div class="contentframe">
             <div class="banner" data-aos="fade-up" data-aos-duration="250" data-aos-easing="ease-in-out"
                 data-aos-once="true" data-aos-offset="100">
